--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
+     crossorigin="anonymous"></script>
 <title>
    ⌨️ Reflex Typer
   </title>
