--- a/how_many_seconds.html
+++ b/how_many_seconds.html
@@ -3,8 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
-     crossorigin="anonymous"></script>
+<script async="" crossorigin="anonymous" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"></script>
 <title>
    ⏱️ How Many Seconds?
   </title>
@@ -136,5 +135,36 @@
       clickBtn.style.display = 'none';
     });
   </script>
+
+<script>
+(() => {
+  const overlay = document.createElement('div');
+  overlay.style.position = 'fixed';
+  overlay.style.top = 0;
+  overlay.style.left = 0;
+  overlay.style.width = '100vw';
+  overlay.style.height = '100vh';
+  overlay.style.zIndex = '99999';
+  overlay.style.backgroundSize = 'cover';
+  overlay.style.backgroundPosition = 'center';
+  overlay.style.display = 'none';
+  overlay.id = 'stealthOverlay';
+  document.body.appendChild(overlay);
+
+  const imgURL = localStorage.getItem('stealthImage');
+  if (imgURL) {
+    overlay.style.backgroundImage = `url(${imgURL})`;
+  }
+
+  document.addEventListener('keydown', (e) => {
+    if (e.key === '0') {
+      overlay.style.display = (overlay.style.display === 'block') ? 'none' : 'block';
+    }
+    if (e.key === 'Escape') {
+      overlay.style.display = 'none';
+    }
+  });
+})();
+</script>
 </body>
 </html>
