css a coté + dark mode

--- a/StartGo.html
+++ b/StartGo.html
@@ -4,144 +4,34 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>
-   🚦 Reaction Game
-  </title>
-<style>
-   body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    #lights {
-      display: flex;
-      gap: 12px;
-      margin-bottom: 30px;
-    }
-
-    .light {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background: #333;
-      box-shadow: 0 0 10px #000;
-      transition: background 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .on {
-      background: red;
-      box-shadow: 0 0 20px red;
-    }
-
-    .go {
-      background: limegreen;
-      box-shadow: 0 0 25px limegreen;
-    }
-
-    #message {
-      font-size: 22px;
-      margin: 10px;
-      text-align: center;
-    }
-
-    #startBtn {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background: #4caf50;
-      color: white;
-      cursor: pointer;
-      margin: 5px;
-      transition: background 0.3s;
-    }
-
-    #startBtn:hover {
-      background: #43a047;
-    }
-
-    #resetBtn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      padding: 5px 10px;
-      font-size: 12px;
-      border: none;
-      border-radius: 6px;
-      background: #555;
-      color: white;
-      cursor: pointer;
-      opacity: 0.7;
-      transition: background 0.3s, opacity 0.3s;
-    }
-
-    #resetBtn:hover {
-      background: #777;
-      opacity: 1;
-    }
-
-    #highscores {
-      margin-top: 20px;
-      max-width: 300px;
-      text-align: center;
-    }
-
-    #highscores h2 {
-      margin-bottom: 10px;
-    }
-
-    #highscores ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    #highscores li {
-      padding: 3px 0;
-    }
-  </style>
-<script src="stealth.js">
+<title>🚦 Reaction Game</title>
+  <link rel="stylesheet" href="./css/startgo.css">
+  <link rel="stylesheet" href="./css/dark.css">
 </script>
 </head>
 <body>
-<h1>
-   🚦 Reaction Game
-  </h1>
-<div id="lights">
-<div class="light" id="light1">
-</div>
-<div class="light" id="light2">
-</div>
-<div class="light" id="light3">
-</div>
-<div class="light" id="light4">
-</div>
-<div class="light" id="light5">
-</div>
-</div>
-<div id="message">
-   Click start and wait for the green light.
+  <div id="theme-toggle-container">
+    <button id="theme-toggle">🌙 Mode sombre</button>
   </div>
-<button id="startBtn">
-   Start
-  </button>
-<button id="resetBtn">
-   🗑️
-  </button>
-<div id="highscores">
-<h2>
-    🏆 Highscores
-   </h2>
-<ul id="scoreList">
-</ul>
-</div>
-<script>
+  <h1>🚦 Reaction Game</h1>
+  <div id="lights">
+  <div class="light" id="light1"></div>
+  <div class="light" id="light2"></div>
+  <div class="light" id="light3"></div>
+  <div class="light" id="light4"></div>
+  <div class="light" id="light5"></div>
+
+  <div id="message">Click start and wait for the green light.</div>
+
+  <button id="startBtn">Start</button>
+  <button id="resetBtn">🗑️</button>
+
+  <div id="highscores">
+    <h2>🏆 Highscores</h2>
+    <ul id="scoreList"></ul>
+  </div>
+
+  <script>
    const lights = [
       document.getElementById('light1'),
       document.getElementById('light2'),
@@ -263,5 +153,7 @@
 
     updateHighscores();
   </script>
+  <script src="stealth.js"></script>
+  <script src="./js/dark.js"></script>
 </body>
 </html>
