--- a/index.html
+++ b/index.html
@@ -5,87 +5,15 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>🎮 Game Launcher</title>
-<style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #111;
-      color: #fff;
-      text-align: center;
-      margin: 0;
-      padding: 40px;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-    .game-link {
-      display: block;
-      margin: 15px auto;
-      padding: 15px 30px;
-      background-color: #333;
-      color: white;
-      text-decoration: none;
-      font-size: 1.2rem;
-      border-radius: 10px;
-      width: 280px;
-      transition: background 0.3s;
-    }
-    .game-link:hover {
-      background-color: #555;
-    }
-    #fakeOverlay {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-      z-index: 9999;
-    }
-    #imgInput {
-      margin: 30px 0 10px;
-    }
-    #hint {
-      font-size: 0.9em;
-      color: #aaa;
-      margin-bottom: 10px;
-    }
-    #howToBtn {
-      margin-top: 10px;
-      background: #444;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 8px;
-      color: white;
-      cursor: pointer;
-    }
-    #howToOverlay {
-      display: none;
-      background: rgba(0,0,0,0.85);
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      z-index: 10000;
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    #howToOverlay h2 {
-      margin-bottom: 20px;
-    }
-    #closeHowTo {
-      margin-top: 20px;
-      padding: 8px 16px;
-      background: #666;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-  </style>
+
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/dark.css">
 </head>
 <body>
+  <div id="theme-toggle-container">
+  <button id="theme-toggle">🌙 Mode sombre</button>
+</div>
+
 <h1>🎮 Welcome to My Game Hub</h1>
 <a class="game-link" href="StartGo.html">🚦 Reaction Light</a>
 <a class="game-link" href="how_many_seconds.html">⏱️ How Many Seconds?</a>
@@ -165,6 +93,7 @@
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  <script src="./js/dark.js"></script>
 </div>
 
 </body>
