--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -1,85 +1,18 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
 <title>
    ⌨️ Reflex Typer
   </title>
-<style>
-   body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #e0eafc, #cfdef3);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-    h1 {
-      margin-bottom: 10px;
-      font-size: 3rem;
-    }
-    #letter {
-      font-size: 120px;
-      font-weight: bold;
-      margin: 30px;
-      color: #333;
-      transition: transform 0.3s ease;
-    }
-    #info, #score, #highscore {
-      font-size: 24px;
-      margin: 10px;
-    }
-    #startBtn, #replayBtn {
-      padding: 15px 30px;
-      font-size: 20px;
-      border: none;
-      background: #4CAF50;
-      color: white;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.2s ease;
-      margin: 10px;
-    }
-    #startBtn:hover, #replayBtn:hover {
-      background: #45a049;
-      transform: scale(1.05);
-    }
-    #summary {
-      display: none;
-      background: white;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      margin-top: 30px;
-      max-width: 400px;
-      text-align: center;
-      animation: fadeIn 0.5s ease;
-    }
-    #summary h2 {
-      margin-bottom: 20px;
-    }
-    #avgTimeDisplay {
-      margin-top: 10px;
-      font-size: 28px;
-      font-weight: bold;
-      color: #222;
-    }
-    #totalHits {
-      font-size: 22px;
-      margin-top: 5px;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
-    }
-  </style>
-<script src="stealth.js">
-</script>
+  <link rel="stylesheet" href="./css/reflexes_clavier.css">
+  <link rel="stylesheet" href="./css/dark.css">
+
 </head>
 <body>
+    <div id="theme-toggle-container">
+  <button id="theme-toggle">🌙 Mode sombre</button>
+</div>
 <h1>
    ⌨️ Reflex Typer
   </h1>
@@ -118,5 +51,8 @@ document.addEventListener('keydown', function(e) {
     document.getElementById('startBtn').click();
   }
 });
-</script></body>
+</script>
+<script src="stealth.js"></script>
+<script src="./js/dark.js"></script>
+</body>
 </html>
