--- a/StartGo.html
+++ b/StartGo.html
@@ -4,34 +4,51 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>🚦 Reaction Game</title>
+<title>
+   🚦 Reaction Game
+  </title>
+
+
   <link rel="stylesheet" href="./css/startgo.css">
   <link rel="stylesheet" href="./css/dark.css">
 </script>
 </head>
 <body>
-  <div id="theme-toggle-container">
-    <button id="theme-toggle">🌙 Mode sombre</button>
+    <div id="theme-toggle-container">
+  <button id="theme-toggle">🌙 Mode sombre</button>
+</div>
+<h1>
+   🚦 Reaction Game
+  </h1>
+<div id="lights">
+<div class="light" id="light1">
+</div>
+<div class="light" id="light2">
+</div>
+<div class="light" id="light3">
+</div>
+<div class="light" id="light4">
+</div>
+<div class="light" id="light5">
+</div>
+</div>
+<div id="message">
+   Click start and wait for the green light.
   </div>
-  <h1>🚦 Reaction Game</h1>
-  <div id="lights">
-  <div class="light" id="light1"></div>
-  <div class="light" id="light2"></div>
-  <div class="light" id="light3"></div>
-  <div class="light" id="light4"></div>
-  <div class="light" id="light5"></div>
-
-  <div id="message">Click start and wait for the green light.</div>
-
-  <button id="startBtn">Start</button>
-  <button id="resetBtn">🗑️</button>
-
-  <div id="highscores">
-    <h2>🏆 Highscores</h2>
-    <ul id="scoreList"></ul>
-  </div>
-
-  <script>
+<button id="startBtn">
+   Start
+  </button>
+<button id="resetBtn">
+   🗑️
+  </button>
+<div id="highscores">
+<h2>
+    🏆 Highscores
+   </h2>
+<ul id="scoreList">
+</ul>
+</div>
+<script>
    const lights = [
       document.getElementById('light1'),
       document.getElementById('light2'),
