Restructuration Js and color

--- a/StartGo.html
+++ b/StartGo.html
@@ -170,7 +170,7 @@
 
     updateHighscores();
   </script>
-  <script src="stealth.js"></script>
+  <script src="./js/stealth.js"></script>
   <script src="./js/dark.js"></script>
 </body>
 </html>
