--- a/how_many_seconds.html
+++ b/how_many_seconds.html
@@ -94,7 +94,7 @@
       clickBtn.style.display = 'none';
     });
   </script>
-  <script src="stealth.js"></script>
+  <script src="./js/stealth.js"></script>
   <script src="./js/dark.js"></script>
 </body>
 </html>
