--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -52,7 +52,7 @@ document.addEventListener('keydown', function(e) {
   }
 });
 </script>
-<script src="stealth.js"></script>
+<script src="./js/stealth.js"></script>
 <script src="./js/dark.js"></script>
 </body>
 </html>
