--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -54,6 +54,7 @@
   const totalHitsDisplay = document.getElementById('totalHits');
   const replayBtn = document.getElementById('replayBtn');
 
+
   let currentLetter = '';
   let score = 0;
   let highScore = parseInt(localStorage.getItem('reflexHighscore')) || 0;
@@ -183,6 +184,8 @@ function resetGame() {
   });
   </script>
   <script src="./js/stealth.js"></script>
-<script src="./js/dark.js"></script>
+
+  // dark mode
+  <script src="./js/dark.js"></script>
 </body>
 </html>
