--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -185,7 +185,7 @@ function resetGame() {
   </script>
   <script src="./js/stealth.js"></script>
 
-  // dark mode
+  <!-- // dark mode -->
   <script src="./js/dark.js"></script>
 </body>
 </html>
