--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>🎮 Game Launcher</title>
+<title>🎮 Bored at school</title>
 
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/dark.css">
 </head>
 <body>
   <div id="theme-toggle-container">
-  <button id="theme-toggle">🌙 Mode sombre</button>
+  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
 
-<h1>🎮 Welcome to My Game Hub</h1>
+<h1>🎮 Bored at school</h1>
 <a class="game-link" href="StartGo.html">🚦 Reaction Light</a>
 <a class="game-link" href="how_many_seconds.html">⏱️ How Many Seconds?</a>
 <a class="game-link" href="réflexes_clavier.html">⌨️ Reflex Typer</a>
-<label for="imgInput" class="custom-file-upload">📁 Choose an image</label>
-<input accept="image/*" id="imgInput" type="file"/>
-<div id="preview"></div>
+<a class="game-link" href="bodge_the_squares.html">🛸 Bodge the squares</a>
 
+<div id="preview"></div>  
 <div id="hint">💡 Press <strong>F9</strong> to toggle stealth mode. Press <strong>Escape</strong> to exit it.</div>
-<button id="howToBtn">ℹ️ How does stealth mode work?</button>
+<label for="imgInput" class="custom-file-upload game-link">📁 Choose an image</label>
+<input accept="image/*" id="imgInput" type="file"/>
+
+
+
+<button id="howToBtn" class="game-link">ℹ️ How does stealth mode work?</button>
 <div id="fakeOverlay"></div>
 <div id="howToOverlay">
 <h2>Stealth Mode Guide</h2>
@@ -32,7 +36,7 @@
 
 
 <button id="closeHowTo">Close</button>
-<p>1. Upload a screenshot or fake image to disguise your screen.</p><p>2. Set a key (1–9) to toggle the image on/off.</p><p>3. Press Escape to return to the game.</p><p></p></div>
+<p>1. Upload a screenshot or fake image to disguise your screen.</p><p>2. Press F9 to toggle the image on/off.</p><p>3. Press Escape to return to the game.</p><p></p></div>
 <script>
     const overlay = document.getElementById('fakeOverlay');
     const imgInput = document.getElementById('imgInput');
@@ -98,7 +102,7 @@
 });
 
   </script>
-<div style="margin: 10px 0;">Choose stealth key (1–9): <select id="keyPicker"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option></select></div><script>
+<script>
   const keyPicker = document.getElementById('keyPicker');
   if (keyPicker) {
     const current = localStorage.getItem('stealthKey') || '7';
