--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -27,8 +27,8 @@
 
     
     
-    <div id="theme-toggle-container">
-  <button id="theme-toggle">🌙 Mode sombre</button>
+  <div id="theme-toggle-container">
+  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
 <h1>
    ⌨️ Reflex Typer
