--- a/StartGo.html
+++ b/StartGo.html
@@ -31,8 +31,8 @@
 
     
     
-    <div id="theme-toggle-container">
-  <button id="theme-toggle">🌙 Mode sombre</button>
+  <div id="theme-toggle-container">
+  <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
 <h1>
    🚦 Reaction Game
