--- a/how_many_seconds.html
+++ b/how_many_seconds.html
@@ -8,8 +8,9 @@
 
     <link rel="stylesheet" href="./css/how_many_seconds.css">
     <link rel="stylesheet" href="./css/dark.css">
-
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -25,16 +26,17 @@
         text-decoration: none;
         font-family: Arial, sans-serif;
         z-index: 9999;
-    ">🏠 Accueil</a>
+    ">🏠 Menu</a>
 
     
   <div id="theme-toggle-container">
   <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
+<h1>How many seconds ?</h1>
 <div id="container">
-<h1>
+<h2>
     ⏱️ Click after the selected time
-   </h1>
+   </h2>
 <div id="message">
     Choose a delay, then press "Start".
    </div>
