--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
+     crossorigin="anonymous"></script>
 <title>🎮 Bored at school</title>
 
   <link rel="stylesheet" href="./css/index.css">
@@ -18,7 +20,7 @@
 <a class="game-link" href="StartGo.html">🚦 Reaction Light</a>
 <a class="game-link" href="how_many_seconds.html">⏱️ How Many Seconds?</a>
 <a class="game-link" href="réflexes_clavier.html">⌨️ Reflex Typer</a>
-<a class="game-link" href="bodge_the_squares.html">🛸 Bodge the squares</a>
+<a class="game-link" href="bodge_the_squares.html">🟥 Square Dodger</a>
 
 <div id="preview"></div>  
 <div id="hint">💡 Press <strong>F9</strong> to toggle stealth mode. Press <strong>Escape</strong> to exit it.</div>
@@ -36,7 +38,7 @@
 
 
 <button id="closeHowTo">Close</button>
-<p>1. Upload a screenshot or fake image to disguise your screen.</p><p>2. Press F9 to toggle the image on/off.</p><p>3. Press Escape to return to the game.</p><p></p></div>
+<p>1. Upload a screenshot or fake image to disguise your screen.</p><p>2. Press F9 to toggle the image on/off.</p><p>3. Press F11 to switch in fullscreen mode</p><p>4. Press Escape to return to the game.</p></div>
 <script>
     const overlay = document.getElementById('fakeOverlay');
     const imgInput = document.getElementById('imgInput');
