--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -7,7 +7,8 @@
   </title>
   <link rel="stylesheet" href="./css/reflexes_clavier.css">
   <link rel="stylesheet" href="./css/dark.css">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
