--- a/StartGo.html
+++ b/StartGo.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="./css/startgo.css">
   <link rel="stylesheet" href="./css/dark.css">
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -26,7 +28,7 @@
         text-decoration: none;
         font-family: Arial, sans-serif;
         z-index: 9999;
-    ">🏠 Accueil</a>
+    ">🏠 Menu</a>
     
 
     
