--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
      crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-2810189862013244">
 <title>🎮 Bored at school</title>
 
   <link rel="stylesheet" href="./css/index.css">
