--- a/StartGo.html
+++ b/StartGo.html
@@ -14,6 +14,7 @@
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
      crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-2810189862013244">
 </head>
 <body>
 
