--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/dark.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
      crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-2810189862013244">
 </head>
 <body>
 
