--- a/Click_War.html
+++ b/Click_War.html
@@ -223,6 +223,15 @@
       });
     });
   </script>
-
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'cc61bb0878d9a2b27d1657b91ffdf672',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/cc61bb0878d9a2b27d1657b91ffdf672/invoke.js"></script>
 </body>
 </html>
