--- a/how_many_seconds.html
+++ b/how_many_seconds.html
@@ -114,5 +114,15 @@
   </script>
   <script src="./js/stealth.js"></script>
   <script src="./js/dark.js"></script>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'cc61bb0878d9a2b27d1657b91ffdf672',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/cc61bb0878d9a2b27d1657b91ffdf672/invoke.js"></script>
 </body>
 </html>
