--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </div>
 
 <h1>🎮 Bored at school</h1>
+<div class="adsbox" style="height: 1px; width: 1px; position: absolute; left: -9999px;"></div>
 <a class="game-link" href="StartGo.html">🚦 Reaction Light</a>
 <a class="game-link" href="how_many_seconds.html">⏱️ How Many Seconds?</a>
 <a class="game-link" href="réflexes_clavier.html">⌨️ Reflex Typer</a>
@@ -115,6 +116,10 @@
     });
   }
 </script>
+
+<script src="./js/antiadblock.js"></script>
+
+
 <!-- AdSense Banner -->
 <div class="ad-banner">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
