maj anti addblock

--- a/Click_War.html
+++ b/Click_War.html
@@ -110,7 +110,7 @@
   <button id="start-btn">Lancer la partie</button>
 
   <div id="error-message">💀 La fenêtre est trop petite !<br> Agrandis-la pour pouvoir jouer !</div>
-
+  <script src="./js/antiadblock.js"></script>
   <script>
     const clickBtn = document.getElementById("click-btn");
     const startBtn = document.getElementById("start-btn");
