--- a/StartGo.html
+++ b/StartGo.html
@@ -68,6 +68,7 @@
 <ul id="scoreList">
 </ul>
 </div>
+<script src="./js/antiadblock.js"></script>
 <script>
    const lights = [
       document.getElementById('light1'),
