--- a/how_many_seconds.html
+++ b/how_many_seconds.html
@@ -80,6 +80,7 @@
 <div id="result">
 </div>
 </div>
+<script src="./js/antiadblock.js"></script>
 <script>
    const startBtn = document.getElementById('startBtn');
     const clickBtn = document.getElementById('clickBtn');
