--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <h1>🎮 Bored at school</h1>
-<div class="adsbox" style="height: 1px; width: 1px; position: absolute; left: -9999px;"></div>
+<div class="adsbox" style="width:1px;height:1px;position:absolute;left:-9999px;top:-9999px;"></div>
 <a class="game-link" href="StartGo.html">🚦 Reaction Light</a>
 <a class="game-link" href="how_many_seconds.html">⏱️ How Many Seconds?</a>
 <a class="game-link" href="réflexes_clavier.html">⌨️ Reflex Typer</a>
