--- a/réflexes_clavier.html
+++ b/réflexes_clavier.html
@@ -62,6 +62,7 @@
     Replay
    </button>
 </div>
+<script src="./js/antiadblock.js"></script>
   <script>
   const letters = 'abcdefghijklmnopqrstuvwxyz'.split('');
   const letterDiv = document.getElementById('letter');
