--- a/bodge_the_squares.html
+++ b/bodge_the_squares.html
@@ -39,7 +39,7 @@
     <div id="score">Score: 0</div>
     <div id="bestScore">Best: 0</div>
     <button id="restart">Restart</button>
-
+  <script src="./js/antiadblock.js"></script>
   <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
