--- a/evrest.html
+++ b/evrest.html
@@ -72,6 +72,8 @@
 <div id="best"></div>
 <button id="restart" style="display:none;">🔄 Recommencer</button>
 
+
+<script src="./js/antiadblock.js"></script>
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
