--- a/ads.html
+++ b/ads.html
@@ -6,7 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-
+    <!--Social bar-->
+<script type='text/javascript' src='//pl26687779.profitableratecpm.com/26/79/48/2679483a59f6f23042e700a887622464.js'></script>
+    <!--native banner-->
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
 
 
     
